--- a/rocketFlowSdk/src/main/res/layout/layout_frgmrnt_task_details_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/layout_frgmrnt_task_details_sdk.xml
@@ -1660,43 +1660,56 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_timeline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/windowBackgroundColor"
-                        android:orientation="horizontal"
-                        android:paddingLeft="@dimen/dimen_15">
+                        android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            app:srcCompat="@drawable/ic_time_line_sort" />
+                            android:background="@color/windowBackgroundColor"
+                            android:orientation="horizontal"
+                            android:paddingLeft="@dimen/dimen_15">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                app:srcCompat="@drawable/ic_time_line_sort" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/campton_book"
+                                android:paddingLeft="@dimen/dimen_5"
+                                android:paddingTop="@dimen/dimen_10"
+                                android:paddingBottom="@dimen/dimen_10"
+                                android:text="@string/time_line"
+                                android:textColor="@color/black" />
+
+
+                        </LinearLayout>
 
                         <TextView
+                            android:id="@+id/tv_timeline_more"
+                            style="@style/TextViewStyleBold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/campton_book"
-                            android:paddingLeft="@dimen/dimen_5"
-                            android:paddingTop="@dimen/dimen_10"
-                            android:paddingBottom="@dimen/dimen_10"
-                            android:text="@string/time_line"
-                            android:textColor="@color/black" />
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginBottom="@dimen/dimen_20"
+                            android:layout_marginRight="@dimen/dimen_20"
+                            android:text="View More"
+                            android:textColor="@color/blue"
+                            android:textSize="@dimen/text_size_13"
+                            android:visibility="visible" />
 
-                    </LinearLayout>
-
-                    <!--<androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerTimeLine"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:adapter="@{timeLineAdapter}"
-                        android:orientation="vertical"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/item_time_line_sdk" />-->
+                    </RelativeLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_Fields"
