--- a/rocketFlowSdk/src/main/res/menu/filter_task.xml
+++ b/rocketFlowSdk/src/main/res/menu/filter_task.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_white"
         android:title="@string/search_hint"
+        app:queryBackground="@color/white"
         android:theme="@style/MySearchViewStyle"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always" />
