--- a/rocketFlowSdk/src/main/res/values/styles.xml
+++ b/rocketFlowSdk/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorControlNormal">@color/white</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/blue</item>
         <item name="colorSecondary">@color/colorAccent</item>
         <item name="colorOnSecondary">@color/white</item>
         <item name="android:statusBarColor" tools:ignore="NewApi">@color/colorPrimary</item>
@@ -24,12 +24,22 @@
     <item name="android:textColorHint">@color/white</item>
     <item name="android:textColorPrimary">@color/white</item>
     <item name="android:textColor">@color/white</item>
+    <item name="android:queryBackground">@color/white</item>
+    <item name="backgroundTint">@color/white</item>
+    <item name="android:backgroundTint">@color/white</item>
     <item name="colorPrimary">@color/white</item>
     <item name="colorPrimaryDark">@color/white</item>
     <item name="colorAccent">@color/white</item>
+    <item name="colorSecondary">@color/white</item>
+    <item name="colorOnSecondary">@color/white</item>
     <item name="voiceIcon">@drawable/ic_search_white</item>
     <item name="closeIcon">@android:drawable/ic_menu_close_clear_cancel</item>
+    <item name="android:editTextColor">@color/white</item>
+    <item name="android:fontFamily">@font/campton_book</item>
+    <item name="colorControlNormal">@color/white</item>
+    <item name="colorControlActivated">@color/white</item>
 </style>
+
 
     <style name="ToolbarBlack" parent="Base.ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:layout_width">match_parent</item>
