--- a/rocketFlowSdk/src/main/res/layout/access_denied.xml
+++ b/rocketFlowSdk/src/main/res/layout/access_denied.xml
@@ -23,8 +23,8 @@
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/gray_time"
         android:fontFamily="@font/campton_book"
@@ -42,6 +42,7 @@
         android:layout_marginBottom="64dp"
         android:fontFamily="@font/campton_book"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -54,9 +55,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:fontFamily="@font/campton_book"
-        android:text="TextView"
+        android:text="Access Denied"
         android:textAlignment="center"
-        android:textSize="@dimen/text_size_16"
+        android:textSize="@dimen/text_size_20"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
