Updated SDK 26 June 2023 3

--- a/rocketFlowSdk/src/main/res/layout/activity_payment_webview_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_payment_webview_sdk.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:theme="@style/AppTheme.BlackAccent"
+                android:theme="@style/AppThemeBlue.BlackAccent"
                 android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />
         </RelativeLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
