--- a/rocketFlowSdk/src/main/res/layout/activity_contact_list_sdk.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_contact_list_sdk.xml
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:theme="@style/AppTheme.BlackAccent"
+            android:theme="@style/AppThemeBlue.BlackAccent"
             android:visibility="gone" />
     </RelativeLayout>
 </layout>
